rename favourites to pins
