# routes/api/topic.js
@@ -57,7 +57,7 @@ module.exports = function (app) {
     var TopicVote = models.TopicVote;
     var TopicAttachment = models.TopicAttachment;
     var Attachment = models.Attachment;
-    var TopicFavourite = models.TopicFavourite;
+    var TopicPin = models.TopicPin;
 
     var _hasPermission = function (topicId, userId, level, allowPublic, topicStatusesAllowed, allowSelf, partnerId) {
         var LEVELS = {
@@ -929,7 +929,7 @@ module.exports = function (app) {
                     resObject.sourcePartnerId = null;
                 }
 
-                resObject.favourite = false;
+                resObject.pinned = false;
                 resObject.permission = { // TODO: should be plural?
                     level: level
                 };
@@ -1018,9 +1018,9 @@ module.exports = function (app) {
                         ELSE NULL \
                         END as "tokenJoin", \
                         CASE \
-                        WHEN tf."topicId" = t.id THEN true \
+                        WHEN tp."topicId" = t.id THEN true \
                         ELSE false \
-                        END as "favourite", \
+                        END as "pinned", \
                         t.categories, \
                         t."endsAt", \
                         t."padUrl", \
@@ -1116,7 +1116,7 @@ module.exports = function (app) {
                         LEFT JOIN "Votes" v \
                                 ON v.id = tv."voteId" \
                     ) AS tv ON (tv."topicId" = t.id) \
-                    LEFT JOIN "TopicFavourites" tf ON tf."topicId" = t.id AND tf."userId" = :userId \
+                    LEFT JOIN "TopicPins" tp ON tp."topicId" = t.id AND tp."userId" = :userId \
                     ' + join + ' \
                 WHERE t.id = :topicId \
                     AND t."deletedAt" IS NULL \
@@ -1593,7 +1593,7 @@ module.exports = function (app) {
         var visibility = req.query.visibility;
         var creatorId = req.query.creatorId;
         var statuses = req.query.statuses;
-        var favourite = req.query.favourite;
+        var pinned = req.query.pinned;
         if (statuses && !Array.isArray(statuses)) {
             statuses = [statuses];
         }
@@ -1663,8 +1663,8 @@ module.exports = function (app) {
             where += ' AND t.status IN (:statuses)';
         }
 
-        if (favourite) {
-            where += 'AND tf."topicId" = t.id AND tf."userId" = :userId';
+        if (pinned) {
+            where += 'AND tp."topicId" = t.id AND tp."userId" = :userId';
         }
 
         if (creatorId) {
@@ -1690,9 +1690,9 @@ module.exports = function (app) {
                         ELSE NULL \
                      END as "tokenJoin", \
                      CASE \
-                        WHEN tf."topicId" = t.id THEN true \
+                        WHEN tp."topicId" = t.id THEN true \
                         ELSE false \
-                     END as "favourite", \
+                     END as "pinned", \
                      t.categories, \
                      t."sourcePartnerId", \
                      t."sourcePartnerObjectId", \
@@ -1809,10 +1809,10 @@ module.exports = function (app) {
                                 ) AS tcc \
                             GROUP BY tcc."topicId" \
                     ) AS com ON (com."topicId" = t.id) \
-                    LEFT JOIN "TopicFavourites" tf ON tf."topicId" = t.id AND tf."userId" = :userId \
+                    LEFT JOIN "TopicPins" tp ON tp."topicId" = t.id AND tp."userId" = :userId \
                     ' + join + ' \
                 WHERE ' + where + ' \
-                ORDER BY "favourite" DESC, "order" ASC, t."updatedAt" DESC \
+                ORDER BY "pinned" DESC, "order" ASC, t."updatedAt" DESC \
             ;';
 
         var topicsPromise = db
@@ -6668,12 +6668,12 @@ module.exports = function (app) {
             .catch(next);
     });
 
-    app.post('/api/users/:userId/topics/:topicId/favourites', loginCheck(['partner']), function (req, res, next) {
+    app.post('/api/users/:userId/topics/:topicId/pin', loginCheck(['partner']), function (req, res, next) {
         var userId = req.user.id;
         var topicId = req.params.topicId;
 
         return db.transaction(function (t) {
-            return TopicFavourite
+            return TopicPin
                 .findOrCreate({
                     where: {
                         topicId: topicId,
@@ -6681,7 +6681,7 @@ module.exports = function (app) {
                     },
                     transaction: t
                 })
-                .spread(function (topicFavourite, created) {
+                .spread(function (topicPin, created) {
                     if (created) {
                         return Topic
                             .findOne({
@@ -6700,7 +6700,7 @@ module.exports = function (app) {
                                             id: userId
                                         },
                                         null,
-                                        topicFavourite,
+                                        topicPin,
                                         req.method + ' ' + req.path,
                                         t
                                     );  
@@ -6714,19 +6714,19 @@ module.exports = function (app) {
             .catch(next);
     });
 
-    app.delete('/api/users/:userId/topics/:topicId/favourites', loginCheck(['partner']), function (req, res, next) {
+    app.delete('/api/users/:userId/topics/:topicId/pin', loginCheck(['partner']), function (req, res, next) {
         var userId = req.user.id;
         var topicId = req.params.topicId;
 
-        TopicFavourite
+        TopicPin
             .findOne({
                 where: {
                     userId: userId,
                     topicId: topicId
                 }
             })
-            .then(function (topicFavourite) {
-                if (topicFavourite) {
+            .then(function (topicPin) {
+                if (topicPin) {
                     return db
                         .transaction(function (t) {
                             return Topic
@@ -6740,7 +6740,7 @@ module.exports = function (app) {
 
                                     return cosActivities
                                         .deleteActivity(
-                                            topicFavourite, 
+                                            topicPin, 
                                             topic, 
                                             {
                                                 type: 'User',
@@ -6750,7 +6750,7 @@ module.exports = function (app) {
                                             t
                                         )
                                         .then(function () {
-                                            return TopicFavourite
+                                            return TopicPin
                                                 .destroy({
                                                     where: {
                                                         userId: userId,
